--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,8 @@ body {
     background-color: blueviolet;
 }
 
-.debug .card .avatar, .debug .card .details{
+.debug .card .avatar,
+.debug .card .details {
     border: 1px solid red;
 }
 
@@ -55,7 +56,7 @@ body {
 :root {
     --fc-white: #fffffe;
     --fc-title: #e53170;
-    --fc-dark: #0f0e17; 
+    --fc-dark: #0f0e17;
     --fc-blue: #22c9ee;
     --fc-lightgray: #edeaeb;
     --fc-gray: var(--fc-lightgray);
@@ -112,9 +113,9 @@ body {
 /* #region card */
 
 .card {
-    width: 357.98px; /* width: calc(100%/12 * 4 - 2rem);  */
+    width: 357.98px;
+    /* width: calc(100%/12 * 4 - 2rem);  */
     display: flex;
-    /* flex-shrink: 0; */
     margin: 1rem;
     flex-wrap: wrap;
     box-shadow: 0 0 15px black;
@@ -139,11 +140,10 @@ body {
     padding: .5rem 1rem;
     color: var(--fc-white);
     width: calc(100% - 100px);
-    flex-shrink: 0;
 }
 
-.details > * {
-    padding: .25rem 0; 
+.details>* {
+    padding: .25rem 0;
 }
 
 .details .job {
@@ -155,6 +155,4 @@ body {
     text-decoration: none;
 }
 
-
 /* #endregion details */
-
